[gd_scene load_steps=3 format=3 uid="uid://cjkki13jlsbgt"]

[ext_resource type="Script" uid="uid://dl1uby6idmuv7" path="res://scripts/main_multiplayer.gd" id="1_o5qli"]
[ext_resource type="Script" uid="uid://c8vx4wndhvxu0" path="res://scripts/message_box.gd" id="2_0wfyh"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o5qli")

[node name="Login" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -174.0
offset_top = -250.0
offset_right = 174.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="GM" type="MarginContainer" parent="Login"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="GMVbox" type="VBoxContainer" parent="Login/GM"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="Login/GM/GMVbox"]
layout_mode = 2
text = "GM Login"

[node name="GMUsrnm" type="LineEdit" parent="Login/GM/GMVbox"]
custom_minimum_size = Vector2(0, 31)
layout_mode = 2
placeholder_text = "Username
"

[node name="GMLogin" type="Button" parent="Login/GM/GMVbox"]
layout_mode = 2
text = "Login"

[node name="Player" type="MarginContainer" parent="Login"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="PlayerVbox" type="VBoxContainer" parent="Login/Player"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="Login/Player/PlayerVbox"]
layout_mode = 2
text = "Player Login"

[node name="PlayerUsrnm" type="LineEdit" parent="Login/Player/PlayerVbox"]
custom_minimum_size = Vector2(0, 31)
layout_mode = 2
placeholder_text = "Username
"

[node name="IPAddress" type="LineEdit" parent="Login/Player/PlayerVbox"]
custom_minimum_size = Vector2(0, 31)
layout_mode = 2
placeholder_text = "IP Address"

[node name="PlayerLogin" type="Button" parent="Login/Player/PlayerVbox"]
layout_mode = 2
text = "Login"

[node name="MainUI" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainVbox" type="VBoxContainer" parent="MainUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="UpperA" type="HBoxContainer" parent="MainUI/MainVbox"]
layout_mode = 2

[node name="Label" type="Label" parent="MainUI/MainVbox/UpperA"]
layout_mode = 2
text = "placeholder line for like \"file\", \"edit\" those kinda things"

[node name="UpperB" type="HBoxContainer" parent="MainUI/MainVbox"]
layout_mode = 2

[node name="Label" type="Label" parent="MainUI/MainVbox/UpperB"]
layout_mode = 2
text = "Another placeholder for the tabs section"

[node name="Lower" type="HBoxContainer" parent="MainUI/MainVbox"]
layout_mode = 2
size_flags_vertical = 3

[node name="PlayTabs" type="TabContainer" parent="MainUI/MainVbox/Lower"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MessageBox" type="VBoxContainer" parent="MainUI/MainVbox/Lower"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
script = ExtResource("2_0wfyh")

[node name="Messages" type="TextEdit" parent="MainUI/MainVbox/Lower/MessageBox"]
layout_mode = 2
size_flags_vertical = 3
editable = false

[node name="Message" type="TextEdit" parent="MainUI/MainVbox/Lower/MessageBox"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
placeholder_text = "Enter your message"

[node name="SenderBox" type="HBoxContainer" parent="MainUI/MainVbox/Lower/MessageBox"]
layout_mode = 2

[node name="Send" type="Button" parent="MainUI/MainVbox/Lower/MessageBox/SenderBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Send"

[connection signal="user_joined" from="." to="MainUI/MainVbox/Lower/MessageBox" method="_on_main_user_joined"]
[connection signal="pressed" from="Login/GM/GMVbox/GMLogin" to="." method="_on_gm_login_pressed"]
[connection signal="pressed" from="Login/Player/PlayerVbox/PlayerLogin" to="." method="_on_player_login_pressed"]
[connection signal="pressed" from="MainUI/MainVbox/Lower/MessageBox/SenderBox/Send" to="MainUI/MainVbox/Lower/MessageBox" method="_on_send_pressed"]
